03/04/2003 Bob Rossi <bob_rossi@cox.net>
   
   * Perfected the queue unit :)
   * Moved all of the command running into commands: This makes one nice entry
   point to running a command.

03/03/2003 Bob Rossi <bob_rossi@cox.net>

   * Added a queue unit to the project: It will contain all of the commands
   ready to go to gdb.

03/02/2003 Bob Rossi <bob_rossi@cox.net>

   * readline buffer commands working
   * Made readline not install any signal handler's

02/27/2003 Bob Rossi <bob_rossi@cox.net>

   * Fix parse bug, looking for 'Located in': when tgdb switch to starting
   gdb from a tty to a regular pipe, gdb now sometimes outputs the command
   that was typed, and sometimes it doesn't ( depending on version ).
   So, instead of counting lines, tgdb looks for 'Located in' after a 
   the 'info source' command.
   * Fix bug with 'info sources': tgdb_get_sources was not returning 
   all of the source files because of an allocation bug.

02/26/2003 Bob Rossi <bob_rossi@cox.net>

    * Added extra parameter to tgdb_start: A new fd is returned from 
    tgdb_start, it signals the user when data the user is typing is 
    ready to be returned.
    * Added function tgdb_send_input: The gui should send to this function
    every char the user has typed ( from readline ).
    * Added function tgdb_recv_input: The gui calls this function when the
    new descriptor is active ( from select ) and gets back data to write 
    to the terminal.
    * Updated gdbmi branch to compile with new interface
    * Implemented new interface in annotate-two-src
    * Getting driver to compile with new interface and moving to lib

02/24/2003 Bob Rossi <bob_rossi@cox.net>

    * Fixing buffer support for line at a time input: Trying to get support
    for buffered commands to work with line at a time interface.
    * Removed legacy globals functions: Removed functions that were looking
    at what char's have been typed and making decisions from that.