@@ -13,6 +13,7 @@
 #include "types.h"
 #include "globals.h"
 #include "error.h"
+#include "util.h"
 
 extern int masterfd;
 static int commands = 0;
@@ -21,9 +22,7 @@ static enum COMMAND_STATE cur_command_state = VOID_COMMAND;
 static int cur_field_num = 0;
 
 /* breakpoint information */
-static char *breakpoint_buffer = NULL;
-static int breakpoint_buffer_block_size = 0;
-static int breakpoint_buffer_pos = 0;
+struct string *breakpoint_string;
 static int breakpoint_table = 0;
 static int breakpoint_enabled = FALSE;
 static int breakpoint_started = FALSE;
@@ -35,9 +34,7 @@ static char last_info_source_requested[MAXLINE];
 
 /* 'info sources' information */
 static int sources_ready = 0;
-static char *sources_buf;
-static int sources_buf_block_size = 0;
-static int sources_buf_pos = 0;
+static struct string *info_sources_string;
 
 static char *sources[MAXLINE];
 static int sources_pos = 0;
@@ -45,6 +42,11 @@ static int sources_pos = 0;
 /* String that is output by gdb to get the absolute path to a file */
 static char *source_prefix = "Located in ";
 static int source_prefix_length = 11;
+
+void commands_init(void) {
+    info_sources_string = string_init();
+    breakpoint_string   = string_init();
+}
 
 static int buf_add(char **buf, char c, int *pos, int *blocksize) {
     if(*pos == MAXLINE*(*blocksize)){
@@ -95,114 +97,105 @@ int commands_parse_source(const char *buf, size_t n, struct Command ***com){
    return 0;
 }
 
-static void free_breakpoint(void){
-   if(breakpoint_buffer != NULL){
-      free(breakpoint_buffer);
-      breakpoint_buffer_block_size += 0;
-      breakpoint_buffer_pos = 0;
-      breakpoint_buffer = NULL;
-   }
-}
-
 static void parse_breakpoint(struct Command ***com){
-   char copy[breakpoint_buffer_pos];
-   char *cur = copy +breakpoint_buffer_pos, *fcur;
-   char fname[MAXLINE + 2], file[MAXLINE], line[MAXLINE];
-   memset(fname, '\0', MAXLINE + 2);
-   memset(file, '\0', MAXLINE);
-   memset(line, '\0', MAXLINE);
+    unsigned long size = string_length(breakpoint_string);
+    char copy[size];
+    char *cur = copy + size, *fcur;
+    char fname[MAXLINE + 2], file[MAXLINE], line[MAXLINE];
+    static char *info_ptr; 
 
-   strncpy(copy, breakpoint_buffer, breakpoint_buffer_pos); /* modify local copy */
+    memset(fname, '\0', MAXLINE + 2);
+    memset(file, '\0', MAXLINE);
+    memset(line, '\0', MAXLINE);
 
-   while(cur != copy){
-      if((*cur) == ':'){
-         if(sscanf(cur + 1, "%s", line) != 1)
-            err_msg("%s:%d -> Could not get line number", __FILE__, __LINE__);
+    info_ptr = string_get(breakpoint_string);
 
-         *cur = '\0';
-         break; /* in case of multiple ':' in the line */
-      } 
+    strncpy(copy, info_ptr, size + 1); /* modify local copy */
 
-      --cur;
-   } /* end while */
+    while(cur != copy){
+        if((*cur) == ':'){
+            if(sscanf(cur + 1, "%s", line) != 1)
+                err_msg("%s:%d -> Could not get line number", __FILE__, __LINE__);
 
-   if(sscanf(copy, "in %s at ", fname) != 1) { /* regular breakpoint */
-       if(sscanf(copy, "on %s at ", fname) != 1) /* Break on ada exception */
-          err_msg("%s:%d -> Could not scan function and file name\n"
-               "\tWas the program compiled with debug info?\n", __FILE__, __LINE__);
-   }
+            *cur = '\0';
+            break; /* in case of multiple ':' in the line */
+        } 
+
+        --cur;
+    } /* end while */
+
+    if(sscanf(copy, "in %s at ", fname) != 1) { /* regular breakpoint */
+        if(sscanf(copy, "on %s at ", fname) != 1) /* Break on ada exception */
+            err_msg("%s:%d -> Could not scan function and file name\n"
+                "\tWas the program compiled with debug info?\n", __FILE__, __LINE__);
+    }
    
-   fcur = copy + strlen(fname) + 7;
+    fcur = copy + strlen(fname) + 7;
 
-   strncpy(file, fcur, strlen(fcur));
+    strncpy(file, fcur, strlen(fcur));
 
-   if(breakpoint_enabled == TRUE)
-      strcat(fname, " y");
-   else
-      strcat(fname, " n");
+    if(breakpoint_enabled == TRUE)
+        strcat(fname, " y");
+    else
+        strcat(fname, " n");
 
-   if(tgdb_append_command(com, BREAKPOINT, fname, line, file) == -1)
-      err_msg("%s:%d -> Could not send command", __FILE__, __LINE__);
+    if(tgdb_append_command(com, BREAKPOINT, fname, line, file) == -1)
+        err_msg("%s:%d -> Could not send command", __FILE__, __LINE__);
 }
 
 
 void commands_set_state(enum COMMAND_STATE state, struct Command ***com){
-   cur_command_state = state;
+    cur_command_state = state;
 
-   switch(cur_command_state){
-      case RECORD:  
-         if(breakpoint_buffer_pos > 0){
-            parse_breakpoint(com);
-            free_breakpoint();
-            breakpoint_enabled = FALSE;
-         }
-       break;
-      case BREAKPOINT_TABLE_END:  
-         if(breakpoint_buffer_pos > 0){
-            parse_breakpoint(com);
+    switch(cur_command_state){
+        case RECORD:  
+            if(string_length(breakpoint_string) > 0){
+                parse_breakpoint(com);
+                string_clear(breakpoint_string);
+                breakpoint_enabled = FALSE;
+            }
+        break;
+        case BREAKPOINT_TABLE_END:  
+            if(string_length(breakpoint_string) > 0)
+                parse_breakpoint(com);
 
             if(tgdb_append_command(com, BREAKPOINTS_END, NULL, NULL, NULL) == -1)
-               err_msg("%s:%d -> Could not send command", __FILE__, __LINE__);
+                err_msg("%s:%d -> Could not send command", __FILE__, __LINE__);
 
-            free_breakpoint();
+            string_clear(breakpoint_string);
             breakpoint_enabled = FALSE;
-         }
 
-         if(breakpoint_started == FALSE){
-            if(tgdb_append_command(com, BREAKPOINTS_BEGIN, NULL, NULL, NULL) == -1)
-               err_msg("%s:%d -> Could not send command", __FILE__, __LINE__);
+            if(breakpoint_started == FALSE){
+                if(tgdb_append_command(com, BREAKPOINTS_BEGIN, NULL, NULL, NULL) == -1)
+                    err_msg("%s:%d -> Could not send command", __FILE__, __LINE__);
             
-            if(tgdb_append_command(com, BREAKPOINTS_END, NULL, NULL, NULL) == -1)
-               err_msg("%s:%d -> Could not send command", __FILE__, __LINE__);
-         }
+                if(tgdb_append_command(com, BREAKPOINTS_END, NULL, NULL, NULL) == -1)
+                    err_msg("%s:%d -> Could not send command", __FILE__, __LINE__);
+            }
 
-         breakpoint_started = FALSE;
-       break;
-      case BREAKPOINT_HEADERS: 
-         breakpoint_table = 0; 
-         break;
-      case BREAKPOINT_TABLE_BEGIN: 
-         if(tgdb_append_command(com, BREAKPOINTS_BEGIN, NULL, NULL, NULL) == -1)
-            err_msg("%s:%d -> Could not send command", __FILE__, __LINE__);
-         breakpoint_table = 1; 
-         breakpoint_started = TRUE;
-         break;
-      case INFO_SOURCES:
-
-         break;
-      default: break;
-   }
+            breakpoint_started = FALSE;
+            break;
+        case BREAKPOINT_HEADERS: 
+            breakpoint_table = 0; 
+            break;
+        case BREAKPOINT_TABLE_BEGIN: 
+            if(tgdb_append_command(com, BREAKPOINTS_BEGIN, NULL, NULL, NULL) == -1)
+                err_msg("%s:%d -> Could not send command", __FILE__, __LINE__);
+            breakpoint_table = 1; 
+            breakpoint_started = TRUE;
+            break;
+        case INFO_SOURCES:
+            break;
+        default: break;
+    }
 }
 
 void commands_set_field_num(int field_num){
    cur_field_num = field_num;
 
    /* clear buffer and start over */
-   if(breakpoint_table && cur_command_state == FIELD && cur_field_num == 5){
-      free_breakpoint();
-      breakpoint_buffer = (char *)calloc(MAXLINE, MAXLINE);
-      breakpoint_buffer_block_size = 1;
-   }
+   if(breakpoint_table && cur_command_state == FIELD && cur_field_num == 5)
+      string_clear(breakpoint_string);
 }
 
 enum COMMAND_STATE commands_get_state(void){
@@ -235,6 +228,7 @@ static int commands_run_com(int fd, char *com, int type){
  *    fd -> The file descriptor to write the command to.
  */
 static int commands_run_info_breakpoints( int fd ) {
+   string_clear(breakpoint_string);
    return commands_run_com(fd, "info breakpoints", 1);
 }
 
@@ -254,15 +248,7 @@ static int commands_run_tty(char *tty, int fd){
  */
 static int commands_run_info_sources(int fd){
    sources_ready = 0;
-   sources_buf_pos = 0; 
-
-   if(sources_buf != NULL){
-      free(sources_buf);
-      sources_buf = NULL;
-      sources_buf_block_size = 0;
-      sources_buf_pos = 0;
-   }
-
+   string_clear(info_sources_string);
    commands_set_state(INFO_SOURCES, NULL);
    global_set_start_info_sources();
    return commands_run_com(fd, "info sources", 1);
@@ -378,25 +364,26 @@ int commands_has_commnands_to_run(void){
 }
 
 static void commands_process_source_line(struct Command  ***com){
-   int i, length = strlen(sources_buf), start = 0;
-   /*err_msg("LINE(%s:%d)\n", sources_buf, length);*/
+    unsigned long length = string_length(info_sources_string), i, start = 0;
+    static char *info_ptr; 
+    info_ptr = string_get(info_sources_string);
   
-   for(i = 0 ; i < length; ++i){
-      if(i > 0 && sources_buf[i - 1] == ',' && sources_buf[i] == ' '){
-         sources[sources_pos] = calloc(sizeof(char),i - start) ;
-         strncpy(sources[sources_pos], sources_buf + start , i - start - 1);
-         /*tgdb_append_command(com, SOURCE_FILE, buf, NULL, NULL);  */
-         start += ((i + 1) - start); 
-         /*err_msg("FOUND(%s)\n", sources[sources_pos]);*/
-         sources_pos++;
-      } else if (i == length - 1 ){
-         sources[sources_pos] = calloc(sizeof(char),i - start + 2);
-         strncpy(sources[sources_pos], sources_buf + start , i - start + 1);
-         /*tgdb_append_command(com, SOURCE_FILE, buf, NULL, NULL);  */
-         /*err_msg("FINAL FOUND(%s)\n", sources[sources_pos]);*/
-         sources_pos++;
-      }
-   }
+    for(i = 0 ; i < length; ++i){
+        if(i > 0 && info_ptr[i - 1] == ',' && info_ptr[i] == ' '){
+            sources[sources_pos] = calloc(sizeof(char),i - start) ;
+            strncpy(sources[sources_pos], info_ptr + start , i - start - 1);
+            /*tgdb_append_command(com, SOURCE_FILE, buf, NULL, NULL);  */
+            start += ((i + 1) - start); 
+            /*err_msg("FOUND(%s)\n", sources[sources_pos]);*/
+            sources_pos++;
+        } else if (i == length - 1 ){
+            sources[sources_pos] = calloc(sizeof(char),i - start + 2);
+            strncpy(sources[sources_pos], info_ptr + start , i - start + 1);
+            /*tgdb_append_command(com, SOURCE_FILE, buf, NULL, NULL);  */
+            /*err_msg("FINAL FOUND(%s)\n", sources[sources_pos]);*/
+            sources_pos++;
+        }
+    }
 }
 
 static void commands_process_info_source(char a){
@@ -426,31 +413,30 @@ static void commands_process_info_source(char a){
 
 /* process's source files */
 static void commands_process_sources(char a, struct Command ***com){
-   static const char *sourcesReadyString = "Source files for which symbols ";
-   static const int sourcesReadyStringLength = 31;
-   buf_add(&sources_buf, a, &sources_buf_pos, &sources_buf_block_size);
+    static const char *sourcesReadyString = "Source files for which symbols ";
+    static const int sourcesReadyStringLength = 31;
+    static char *info_ptr;
+    string_addchar(info_sources_string, a);
    
-   if(a == '\n'){
-      sources_buf[--sources_buf_pos] = '\0'; /* remove '\r' and null terminate */
-      sources_buf[--sources_buf_pos] = '\0'; /* remove '\n' and null terminate */
-      /* valid lines are 
-       * 1. after the first line,
-       * 2. do not end in ':' 
-       * 3. and are not empty 
-       */
+    if(a == '\n'){
+        string_delchar(info_sources_string);     /* remove '\r' and null terminate */
+        string_delchar(info_sources_string);     /* remove '\n' and null terminate */
+        /* valid lines are 
+         * 1. after the first line,
+         * 2. do not end in ':' 
+         * 3. and are not empty 
+         */
+        info_ptr = string_get(info_sources_string);
 
-      /*fprintf(stderr, "LINE(%s)BLOCK(%d)BUF_POS(%d)", sources_buf, sources_buf_block_size, sources_buf_pos);*/
+        if ( strncmp(info_ptr, sourcesReadyString, sourcesReadyStringLength) == 0 )
+            sources_ready = 1;
 
-      if ( strncmp(sources_buf, sourcesReadyString, sourcesReadyStringLength) == 0 )
-         sources_ready = 1;
+        /* is this a valid line */
+        if(string_length(info_sources_string) > 0 && sources_ready && info_ptr[string_length(info_sources_string) - 1] != ':')
+            commands_process_source_line(com); 
 
-       /* is this a valid line */
-       if(sources_buf_pos > 0 && sources_ready && sources_buf[sources_buf_pos - 1] != ':')
-          commands_process_source_line(com); 
-      
-      sources_buf_pos = 0;
-      memset(sources_buf, '\0', sources_buf_block_size*MAX_LINE);
-   }
+        string_clear(info_sources_string);
+    }
 }
 
 void commands_send_gui_sources(struct Command ***com){
@@ -468,19 +454,14 @@ void commands_send_gui_sources(struct Command ***com){
 }
 
 void commands_process(char a, struct Command ***com){
-   if(commands_get_state() == INFO_SOURCES){
-      commands_process_sources(a, com);     
-   } else if(commands_get_state() == INFO_LIST){
-      /* do nothing with data */
-   } else if(commands_get_state() == INFO_SOURCE){
-      commands_process_info_source(a);   
-   } else if(breakpoint_table && cur_command_state == FIELD && cur_field_num == 5){ /* the file name and line num */ 
-      if(breakpoint_buffer_pos == MAXLINE*breakpoint_buffer_block_size){
-         breakpoint_buffer = (char *)realloc(breakpoint_buffer, ++breakpoint_buffer_block_size*MAXLINE);
-         memset(breakpoint_buffer + MAX_LINE, '\0', (breakpoint_buffer_block_size - 1)*MAXLINE);
-      }
-
-      breakpoint_buffer[breakpoint_buffer_pos++] = a;   
-   } else if(breakpoint_table && cur_command_state == FIELD && cur_field_num == 3 && a == 'y')
-         breakpoint_enabled = TRUE;
+    if(commands_get_state() == INFO_SOURCES){
+        commands_process_sources(a, com);     
+    } else if(commands_get_state() == INFO_LIST){
+        /* do nothing with data */
+    } else if(commands_get_state() == INFO_SOURCE){
+        commands_process_info_source(a);   
+    } else if(breakpoint_table && cur_command_state == FIELD && cur_field_num == 5){ /* the file name and line num */ 
+        string_addchar(breakpoint_string, a);
+    } else if(breakpoint_table && cur_command_state == FIELD && cur_field_num == 3 && a == 'y')
+        breakpoint_enabled = TRUE;
 }
